force-app/main/default/objects/Interaction__x/Interaction__x.object-meta.xml
<CustomObject>
    <description>Interaction</description>
    <externalDataSource>Interactions</externalDataSource>
    <externalName>Interaction</externalName>
    <label>Interaction</label>
    <pluralLabel>Interaction</pluralLabel>
</CustomObject>