force-app/main/default/objects/Interaction__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <externalDeveloperName>Account</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>