force-app/main/default/objects/Interaction__x/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Content</description>
    <externalDeveloperName>Content</externalDeveloperName>
    <label>Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>