force-app/main/default/objects/Interaction__x/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <description>CreatedBy</description>
    <externalDeveloperName>CreatedBy</externalDeveloperName>
    <label>CreatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>