force-app/main/default/objects/Interaction__x/fields/HouseholdMember__c.field-meta.xml
<CustomField>
    <fullName>HouseholdMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HouseholdMember</description>
    <externalDeveloperName>HouseholdMember</externalDeveloperName>
    <label>HouseholdMember</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HouseholdMember</relationshipName>
    <type>Lookup</type>
</CustomField>