force-app/main/default/objects/Interaction__x/fields/InteractionDate__c.field-meta.xml
<CustomField>
    <fullName>InteractionDate__c</fullName>
    <description>InteractionDate</description>
    <externalDeveloperName>InteractionDate</externalDeveloperName>
    <label>InteractionDate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>