force-app/main/default/objects/Interaction__x/fields/ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ModifiedBy__c</fullName>
    <description>ModifiedBy</description>
    <externalDeveloperName>ModifiedBy</externalDeveloperName>
    <label>ModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>