force-app/main/default/objects/Interaction__x/fields/ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDate__c</fullName>
    <description>ModifiedDate</description>
    <externalDeveloperName>ModifiedDate</externalDeveloperName>
    <label>ModifiedDate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>