force-app/main/default/objects/Interaction__x/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity</description>
    <externalDeveloperName>Opportunity</externalDeveloperName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>