force-app/main/default/objects/Interaction__x/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject</description>
    <externalDeveloperName>Subject</externalDeveloperName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>